# pad

./: Cargo.toml  Makefile  README.md
deb/: postinst
src/: config.rs  input.rs  lib.rs  lpad.rs  main.rs  output.rs  pad.rs  padding.rs  rpad.rs
src/pad/: mod.rs  output.rs
tests/: cli.rs
